--- a/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
@@ -1,41 +1,46 @@
 ﻿@model BowlingCoreMVC.Models.TeamLastWeekData
 
 
-<div class="card text-white bg-secondary w-50 border-primary card-inline">
+<div class="card text-white bg-secondary card-inline">
     <div class="card-body">
         <h5 class="card-title">@Model.TeamName</h5>
         <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
-        
-            <table class="table table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">User</th>
-                        <th scope="col">Average</th>
-                        <th scope="col">Total Pins</th>
-                        <th scope="col">Total Games</th>
-                        <th scope="col">Game 1</th>
-                        <th scope="col">Game 2</th>
-                        <th scope="col">Game 3</th>
-                        <th scope="col">Series</th>
+
+        <table class="table table-sm table-bordered">
+            <thead class="thead-dark text-sm-center">
+                <tr>
+                    <th scope="col" class="text-center">User</th>
+                    <th scope="col">Average</th>
+                    <th scope="col">Total Pins</th>
+                    <th scope="col">Total Games</th>
+                    <th scope="col">Game 1</th>
+                    <th scope="col">Game 2</th>
+                    <th scope="col">Game 3</th>
+                    <th scope="col">Series</th>
+                </tr>
+            </thead>
+            <tbody class="table-light">
+                @for (var i = 0; i <= Model.UserNames.Count - 1; i++)
+                {
+                    @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.*@
+                    <tr class="text-black-50">
+                        <td scope="col" class="text-sm-center w-100">@Model.UserNames[i]</td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Averages[i]</span></td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.TotalPins[i]</span></td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 3).Single().Score</span></td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.TotalGames[i]</span></td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 1).Single().Score</span></td>
+                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 2).Single().Score</span></td>
+                        <td scope="col" class="text-center"><span class="badge badge-info badge-pill">@Model.Series[i].SeriesScore</span></td>
                     </tr>
-                </thead>
-                <tbody>
-                    @for (var i = 0; i <= Model.UserNames.Count - 1; i++)
-                    {
-                    <tr>
-                        <td scope="col">@Model.UserNames[i]</td>
-                        <td scope="col">@Model.Averages[i]</td>
-                        <td scope="col">@Model.TotalPins[i]</td>
-                        <td scope="col">@Model.TotalGames[i]</td>
-                        <td scope="col">@Model.Series[i].Games.Where(o => o.SeriesIndex == 1).Single().Score</td>
-                        <td scope="col">@Model.Series[i].Games.Where(o => o.SeriesIndex == 2).Single().Score</td>
-                        <td scope="col">@Model.Series[i].Games.Where(o => o.SeriesIndex == 3).Single().Score</td>
-                        <td scope="col">@Model.Series[i].SeriesScore</td>
-                    </tr>
-                    }
-                    
-                </tbody>
-            </table>
+                }
+
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer">
+        @* IF CURRENT USER IS NOT ON ANY TEAM*@
+        <button type="button" class="btn btn-outline-light btn-secondary">Request to Join</button>
     </div>
 </div>
 
