--- a/BowlingCoreMVC/Views/Leagues/Details.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Details.cshtml
@@ -150,9 +150,14 @@
                     <button type="button" class="btn btn-secondary">Request to Join</button>
                 </div>
             </div>
-            
+
 
         </div>
+    }
+
+    @foreach (TeamLastWeekData TeamWeekData in (List<TeamLastWeekData>)ViewData["TeamWeekData"])
+    {
+        <partial name="_TeamWeekSummary" model="TeamWeekData" />
     }
 </div>
 
