--- a/BowlingCoreMVC/Views/Leagues/Index.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Index.cshtml
@@ -52,11 +52,12 @@
                 </td>
                 <td>
                     @{ 
+                        <a asp-action="RequestToJoin" asp-route-id="@item.ID" class="btn btn-outline-secondary">Request to Join</a>
+                        <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
                         if (ViewData["CurrentUserID"].ToString() == item.CreatedByID)
                         {
                             <div class="btn-group">
                                 <a asp-action="Edit" asp-route-id="@item.ID" class="btn btn-primary">Edit</a>
-                                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info">Details</a>
                                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
                             </div>
                         }
