--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -60,7 +60,8 @@
             }
             else
             {
-                <a asp-area="" asp-controller="Stats" asp-action="Index" class="navbar-brand">@ViewData["AppName"]</a>
+                @* Showing Home page in either case now, this used to be Stats *@
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@ViewData["AppName"]</a>
             }
         </div>
 
@@ -114,7 +115,21 @@
 
     </nav>
     <div class="container body-content">
-        <br /><br />
+        <br />
+        @{
+            byte[] Message;
+            @if (Context.Session.TryGetValue("Message", out Message))
+            {
+                if (Message.Length > 0)
+                {
+                <div class="alert alert-danger" role="alert">
+                    @System.Text.Encoding.Default.GetString(Message);
+                    @{Context.Session.Set("Message", new byte[0]);}
+                </div>
+                }
+            }
+        }
+        <br />
         @RenderBody()
         <hr />
         <footer>
