--- a/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
@@ -6,7 +6,7 @@
         <h5 class="card-title">@Model.TeamName</h5>
         <h6 class="card-subtitle mb-2">@Model.SubTitle</h6>
 
-        <table class="table table-sm table-bordered">
+        <table class="table table-sm table-bordered table-responsive-sm">
             <thead class="thead-dark text-sm-center">
                 <tr>
                     <th scope="col" class="text-center">User</th>
@@ -20,21 +20,26 @@
                 </tr>
             </thead>
             <tbody class="table-light">
-                @for (var i = 0; i <= Model.UserNames.Count - 1; i++)
+                @if (Model.UserNames.Count >= 1)
                 {
-                    @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.*@
+                    @for (var i = 0; i <= Model.UserNames.Count - 1; i++)
+                    {
+                        @*TODO(ERIC): Have the Pill be contextual. i.e. Higher than average, green, lower, red.*@
                     <tr class="text-black-50">
-                        <td scope="col" class="text-sm-center w-100">@Model.UserNames[i]</td>
+                        <td scope="col" class="text-sm-center">@Model.UserNames[i]</td>
                         <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Averages[i]</span></td>
                         <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.TotalPins[i]</span></td>
-                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 3).Single().Score</span></td>
                         <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.TotalGames[i]</span></td>
-                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 1).Single().Score</span></td>
-                        <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 2).Single().Score</span></td>
-                        <td scope="col" class="text-center"><span class="badge badge-info badge-pill">@Model.Series[i].SeriesScore</span></td>
+                        @if (Model.Series[i] != null)
+                        {
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 1).Single().Score</span></td>
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 2).Single().Score</span></td>
+                            <td scope="col" class="text-sm-center"><span class="badge badge-info badge-pill">@Model.Series[i].Games.Where(o => o.SeriesIndex == 3).Single().Score</span></td>
+                            <td scope="col" class="text-center"><span class="badge badge-info badge-pill">@Model.Series[i].SeriesScore</span></td>
+                        }
                     </tr>
+                    }
                 }
-
             </tbody>
         </table>
     </div>
