--- a/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_TeamWeekSummary.cshtml
@@ -45,7 +45,8 @@
     </div>
     <div class="card-footer">
         @* IF CURRENT USER IS NOT ON ANY TEAM*@
-        <button type="button" class="btn btn-outline-light btn-secondary">Request to Join</button>
+        <a asp-action="RequestToJoin" asp-controller="Leagues" class="btn btn-outline-light btn-secondary">Request to Join</a>
+        @*<button type="button" class="btn btn-outline-light btn-secondary">Request to Join</button>*@
     </div>
 </div>
 
