--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -118,13 +118,23 @@
         <br />
         @{
             byte[] Message;
-            @if (Context.Session.TryGetValue("Message", out Message))
+            @if (Context.Session.TryGetValue("ErrorMessage", out Message))
             {
                 if (Message.Length > 0)
                 {
                 <div class="alert alert-danger" role="alert">
                     @System.Text.Encoding.Default.GetString(Message);
-                    @{Context.Session.Set("Message", new byte[0]);}
+                    @{Context.Session.Set("ErrorMessage", new byte[0]);}
+                </div>
+                }
+            }
+            else if (Context.Session.TryGetValue("SuccessMessage", out Message))
+            {
+                if (Message.Length > 0)
+                {
+                <div class="alert alert-success" role="alert">
+                    @System.Text.Encoding.Default.GetString(Message);
+                    @{Context.Session.Set("SuccessMessage", new byte[0]);}
                 </div>
                 }
             }
